# biri-lang

./: .gitignore  LICENSE  README.md  biri.cabal
examples/: simple.wf
rts/: bootstrap.c
src/Biri/: Cli.hs  Language.hs
src/Biri/Backend/: Routes.hs  Rts.hs  Target.hs
src/Biri/Backend/CodeGen/: Data.hs
src/Biri/Backend/Routes/: Automaton.hs
src/Biri/Language/: AbstractSyntax.hs  Lexer.hs  Parser.y
src/Text/Literal/: TH.hs
tests/: Main.hs  Syntax.hs
tests/syntax/: Bool-annotated.biri  Bool.biri
