name:                biri-lang
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Andre Moelle
maintainer:          andre.moelle@gmail.com
copyright:           Copyright (C) 2015 Andre Moelle
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable biri
  main-is:             Biri/Cli.hs
  other-modules:       Biri.Language.Parser
  build-depends:       base >=4.7, containers, vector, filepath, array,
                       template-haskell, process >= 1.2, directory, text, bytestring, attoparsec,
                       optparse-applicative
  hs-source-dirs:      src
  build-tools:         happy
  default-language:    Haskell2010

Test-Suite unit-tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       Biri.Language, Biri.Language.Parser
  hs-source-dirs:      tests, src
  build-depends:       base >= 4.7,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       array, text, attoparsec
  default-language:    Haskell2010
